--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "build": "expo build --ios",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -14,7 +15,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.1.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0"
